# internal/server/pikvm_automator_server.go
@@ -3,23 +3,35 @@ package server
 import (
 	"context"
 	gen "github.com/sealbro/pikvm-automator/generated/go"
+	"github.com/sealbro/pikvm-automator/internal/macro"
+	"github.com/sealbro/pikvm-automator/internal/queue"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
 )
 
 type PiKvmAutomatorServer struct {
 	gen.UnimplementedPiKvmAutomatorServer
+	player *queue.ExpressionPlayer
 }
 
-func NewPiKvmAutomatorServer() *PiKvmAutomatorServer {
-	return &PiKvmAutomatorServer{}
+func NewPiKvmAutomatorServer(player *queue.ExpressionPlayer) *PiKvmAutomatorServer {
+	return &PiKvmAutomatorServer{
+		player: player,
+	}
 }
 
 func (s *PiKvmAutomatorServer) CommandList(context.Context, *gen.CommandListRequest) (*gen.CommandListResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method CommandList not implemented")
 }
-func (s *PiKvmAutomatorServer) CallCommand(context.Context, *gen.CallCommandRequest) (*gen.CallCommandResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method CallCommand not implemented")
+func (s *PiKvmAutomatorServer) CallCommand(_ context.Context, req *gen.CallCommandRequest) (*gen.CallCommandResponse, error) {
+	if req.Expression == "" {
+		return nil, status.Errorf(codes.InvalidArgument, "expression is required")
+	}
+
+	expression := macro.New(req.Expression)
+	s.player.AddExpression(expression)
+
+	return &gen.CallCommandResponse{}, nil
 }
 func (s *PiKvmAutomatorServer) ManualCall(context.Context, *gen.ManualCallRequest) (*gen.ManualCallResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method ManualCall not implemented")
